--- a/website/src/app.html
+++ b/website/src/app.html
@@ -5,6 +5,7 @@
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 		<link rel="stylesheet" href="%sveltekit.assets%/global.css" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<title> David Callanan - Software Engineer at DLT Capital Limited </title>
 		%sveltekit.head%
 	</head>
 	<body>
